benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-rfi008.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/rfi008.opt.yml/rfi008.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/rfi008.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_fvx5fggs/tmp/tmpv3mxc0cx.c
Compilation started
/tmp/BenchExec_run_fvx5fggs/tmp/tmpv3mxc0cx.c: In function ‘P0’:
/tmp/BenchExec_run_fvx5fggs/tmp/tmpv3mxc0cx.c:569:19: error: ‘FALSE’ undeclared (first use in this function)
  569 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_fvx5fggs/tmp/tmpv3mxc0cx.c:569:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_fvx5fggs/tmp/tmpv3mxc0cx.c: In function ‘P1’:
/tmp/BenchExec_run_fvx5fggs/tmp/tmpv3mxc0cx.c:608:19: error: ‘FALSE’ undeclared (first use in this function)
  608 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_fvx5fggs/tmp/tmpv3mxc0cx.c:609:19: error: ‘TRUE’ undeclared (first use in this function)
  609 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
